fixing opening menu on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -82,8 +82,8 @@ body > header > div {
 body > header > div > nav {
     white-space: nowrap;
     opacity: 0;
+    transform: translate(0, 30px);
     transition: all .2s;
-    transform: translate(0, 0);
     font-size: 120%;
 }
 body > header:hover > div > nav {
